<resources>
    <string name="app_name">Gadsense</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_account">Accounts</string>
    <string name="accounts">Accounts</string>
    <string name="menu_account">Accounts</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="earnings">Earnings</string>
    <string name="page_views">Page View</string>
    <string name="impressions">Impressions</string>
    <string name="clicks">Clicks</string>
    <string name="page_ctr">Page CT</string>
    <string name="impression_ctr">Impression CTR</string>
    <string name="cpc">CPC</string>
    <string name="page_rpm">Page RPM</string>
    <string name="impression_rpm">Impression RPM</string>
    <string name="currency">$</string>
    <string name="today">today</string>
    <string name="title_section1">today</string>
    <string name="title_section2">yesterday</string>
    <string name="title_section3">this month</string>
    <string name="title_section4">last month</string>
    <string name="show_countries">Show Countries</string>
    <string name="from">From</string>
    <string name="status">Status: </string>
    <string name="to">To</string>
    <string name="generate">Generate</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>

    <item name="action_account" type="id">account</item>

</resources>
