<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="387dp"
        android:layout_above="@+id/generate_bt"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/dimensions_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <ListView
                        android:id="@+id/dimensions_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                    </ListView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/metrics_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <ListView
                        android:id="@+id/metrics_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                    </ListView>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/dates_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/from_bt"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/from" />

                    <Button
                        android:id="@+id/to_bt"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/to" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <Button
        android:id="@+id/generate_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="generateBtClicked"
        android:text="@string/generate" />
    </RelativeLayout>
